--- a/02_function_basics/Lab1.ipynb
+++ b/02_function_basics/Lab1.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assignment No. 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -26,12 +33,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset: Cereal"
+    "## Question number 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +196,7 @@
        "4   14.0       8      -1        25      3     1.0  0.75  34.384843  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,14 +210,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 1: How does a manufactuerer influence the Nutrition of the Cereal"
+    "### Question 1: How does a manufactuerer influence the Nutrition of the Cereal"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pseudocode: \n",
+    "### Pseudocode: \n",
     "1. Group by manufacturer\n",
     "2. What is the average calories\n",
     "3. What is the average grams of sugar\n",
@@ -218,8 +225,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single Line"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +374,7 @@
        "R      115.000000   6.125000"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +400,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +496,7 @@
        "N       86.666667   1.833333"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,8 +507,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -535,13 +556,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 2: What is the relationship between the Nutrition and the Rating"
+    "### Question 2: What is the relationship between the Nutrition and the Rating"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Sudo Code \n",
     "1. Group by Manufacturer\n",
     "2. Find mean Calories\n",
     "3. Find Mean Rating\n",
@@ -549,8 +571,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single Line"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +661,7 @@
        "P      108.888889   41.705744"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +760,7 @@
        "G      111.363636   34.485852"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,8 +771,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -784,12 +820,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset 2"
+    "## Question number 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +972,7 @@
        "4     11.0      3.0      poor  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,13 +986,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 1: What is the quality of more acidic drinks? "
+    "### Question 1: What is the quality of more acidic drinks? "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Sudo Code\n",
     "1. Limit ph scale to under 3.2\n",
     "2. Display acidity, quality, text_rank\n",
     "3. Calculate the total acidity of the drinks\n",
@@ -964,8 +1001,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single Line"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +1031,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1306,7 @@
        "[1482 rows x 13 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1405,7 @@
        "25           12.5             0.460      4.0  poor-ish"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1502,7 @@
        "25           12.5             0.460      4.0  poor-ish         12.960"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1599,7 @@
        "320            15.5             0.645      5.0       ave         16.145"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,8 +1610,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1581,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1605,13 +1656,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 2: How does sugar alcohol content correlate with wine quality?"
+    "### Question 2: How does sugar alcohol content correlate with wine quality?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Sudo Code \n",
     "1. Group by quality\n",
     "2. Find average alcohol content\n",
     "3. Find average sugar \n",
@@ -1619,8 +1671,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single Line"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1629,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1702,7 +1761,7 @@
        "poor          2.100000     8.400000"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1715,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1847,7 @@
        "poor-ish      2.383333     9.483333"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1799,8 +1858,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1813,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
