--- a/05_ML_Concepts_II_Data_Prep/lab3.ipynb
+++ b/05_ML_Concepts_II_Data_Prep/lab3.ipynb
@@ -58,9 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vscode/.local/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -86,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +512,7 @@
        "[1319 rows x 13 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +852,7 @@
        "[1319 rows x 16 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +892,7 @@
        "Name: grad_150_value, dtype: float64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,8 +902,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Prevalence"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +919,7 @@
        "np.float64(0.25701288855193327)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,8 +931,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Data Partition"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1135,7 @@
        "4  Comm&Mgmt     No     96.8        Mkt&Fin  55.50      Placed  425000.0  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,16 +1150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds=ds.dropna()"
+    "ds2=ds.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1170,12 +1192,12 @@
     }
    ],
    "source": [
-    "ds.info()"
+    "ds2.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1199,19 +1221,43 @@
       "salary             float64\n",
       "dtype: object\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_965/2756865639.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  ds2[['ssc_b','hsc_b','hsc_s','degree_t','workex','specialisation']] = ds2[['ssc_b','hsc_b','hsc_s','degree_t','workex','specialisation']].astype('category')\n"
+     ]
     }
    ],
    "source": [
-    "ds[['ssc_b','hsc_b','hsc_s','degree_t','workex','specialisation']] = ds[['ssc_b','hsc_b','hsc_s','degree_t','workex','specialisation']].astype('category')\n",
+    "ds2[['ssc_b','hsc_b','hsc_s','degree_t','workex','specialisation']] = ds2[['ssc_b','hsc_b','hsc_s','degree_t','workex','specialisation']].astype('category')\n",
     "\n",
-    "print(ds.dtypes)"
+    "print(ds2.dtypes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_965/2703365211.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  ds2[abc] = MinMaxScaler().fit_transform(ds2[abc])\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1497,21 +1543,21 @@
        "[148 rows x 15 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "abc = list(ds.select_dtypes('number'))\n",
+    "abc = list(ds2.select_dtypes('number'))\n",
     "\n",
-    "ds[abc] = MinMaxScaler().fit_transform(ds[abc])\n",
-    "ds"
+    "ds2[abc] = MinMaxScaler().fit_transform(ds2[abc])\n",
+    "ds2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1884,30 +1930,30 @@
        "[148 rows x 23 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "category_list = list(ds.select_dtypes('category')) \n",
+    "category_list = list(ds2.select_dtypes('category')) \n",
     "category_list\n",
-    "ds = pd.get_dummies(ds, columns = category_list) \n",
-    "ds"
+    "ds2 = pd.get_dummies(ds2, columns = category_list) \n",
+    "ds2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = ds.drop(['sl_no','gender','status'],axis=1)"
+    "ds2 = ds2.drop(['sl_no','gender','status'],axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1924,18 +1970,25 @@
        "Name: salary, dtype: float64"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds.salary.describe()"
+    "ds2.salary.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Prevalence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1944,20 +1997,27 @@
        "np.float64(0.33783783783783783)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds['salaryf'] = pd.cut(ds.salary, bins = [-1,0.135,1], labels =[0,1])\n",
-    "prevalence = ds.salaryf.value_counts()[1]/len(ds.salaryf)\n",
+    "ds2['salaryf'] = pd.cut(ds2.salary, bins = [-1,0.135,1], labels =[0,1])\n",
+    "prevalence = ds2.salaryf.value_counts()[1]/len(ds2.salaryf)\n",
     "prevalence "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Data Partition"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +2031,7 @@
     }
    ],
    "source": [
-    "Train, Test = train_test_split(ds,  train_size = .8, stratify = ds.salaryf) \n",
+    "Train, Test = train_test_split(ds2,  train_size = .8, stratify = ds2.salaryf) \n",
     "Tune, Test = train_test_split(Test,  train_size = .5, stratify= Test.salaryf)\n",
     "print(Train.shape)\n",
     "print(Test.shape)\n",
@@ -1989,7 +2049,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the first dataset, I emphasized the important of student performance when it comes to determining a college's graduation rate. However, my concern with that dataset is that most of the information is the demographics pf the student population along with the SAT score. There was not even information on the academic performance, such as GPA, class rank average, and ACT score in fact. There are a lot more features to be concerned about in order to yield an accurate result and answer the question. For the second dataset, I chose salary as the target variable. But after I did the test and training split, I realized there wasn't a lot of data for the testing. There are only 148 entries for salary and the 80-20 split was not beneficial for the model, which can be another concern when ensuring the accuracy of the model. "
+    "For the first dataset, I emphasized the important of student performance when it comes to determining a college's graduation rate. However, my concern with that dataset is that most of the information is the demographics pf the student population along with the SAT score. There was no information on other academic criterias, such as GPA, class rank average, and ACT score in fact. There are a lot more features to be concerned about in order to yield an accurate result and answer the question. For the second dataset, I chose salary as the target variable. But after I did the test and training split, I realized there wasn't a lot of data for the testing. There are only 148 entries for salary and the 80-20 split was not beneficial for the model, which can be another concern when ensuring the accuracy of the model. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collegegrad(x):\n",
+    "    x2 = x[['level','control','awards_per_value','awards_per_state_value','awards_per_natl_value',\n",
+    "          'exp_award_value', 'exp_award_state_value', 'exp_award_natl_value', 'ft_pct','med_sat_value',\n",
+    "          'aid_value','grad_150_value']].dropna()\n",
+    "    x2[['level','control']] = x2[['level','control']].astype('category')\n",
+    "    x2[list(x2.select_dtypes('number'))] = MinMaxScaler().fit_transform(x2[list(x2.select_dtypes('number'))])\n",
+    "    x3 = pd.get_dummies(x2, columns = list(df2.select_dtypes('category')) ) \n",
+    "    x3['grad_150'] = pd.cut(x3.grad_150_value, bins = [-1,0.67,1], labels =[0,1])\n",
+    "    Train, Test = train_test_split(x3,  train_size = .8, stratify = x3.grad_150) \n",
+    "    Tune, Test = train_test_split(Test,  train_size = .5, stratify= Test.grad_150)\n",
+    "    \n",
+    "    return Train, Test, Tune"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1055, 16)\n",
+      "(132, 16)\n",
+      "(132, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Train, Test, Tune= collegegrad(df)\n",
+    "print(Train.shape)\n",
+    "print(Test.shape)\n",
+    "print(Tune.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def jobplacement(x):\n",
+    "    x2=x.dropna()\n",
+    "    x2[['ssc_b','hsc_b','hsc_s','degree_t','workex','specialisation']] = x2[['ssc_b','hsc_b','hsc_s','degree_t','workex','specialisation']].astype('category')\n",
+    "    x2[list(x2.select_dtypes('number'))] = MinMaxScaler().fit_transform(x2[list(x2.select_dtypes('number'))])\n",
+    "    x2 = pd.get_dummies(x2, columns = list(x2.select_dtypes('category'))) \n",
+    "    x2 = x2.drop(['sl_no','gender','status'],axis=1)\n",
+    "    x2['salaryf'] = pd.cut(x2.salary, bins = [-1,0.135,1], labels =[0,1])\n",
+    "    Train, Test = train_test_split(x2,  train_size = .8, stratify = x2.salaryf) \n",
+    "    Tune, Test = train_test_split(Test,  train_size = .5, stratify= Test.salaryf)\n",
+    "    return Train, Test, Tune    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(118, 21)\n",
+      "(15, 21)\n",
+      "(15, 21)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_965/3929508207.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  x2[['ssc_b','hsc_b','hsc_s','degree_t','workex','specialisation']] = x2[['ssc_b','hsc_b','hsc_s','degree_t','workex','specialisation']].astype('category')\n",
+      "/tmp/ipykernel_965/3929508207.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  x2[list(x2.select_dtypes('number'))] = MinMaxScaler().fit_transform(x2[list(x2.select_dtypes('number'))])\n"
+     ]
+    }
+   ],
+   "source": [
+    "Train, Test, Tune= jobplacement(ds)\n",
+    "print(Train.shape)\n",
+    "print(Test.shape)\n",
+    "print(Tune.shape)"
    ]
   }
  ],
