--- a/05_ML_Concepts_II_Data_Prep/revised_linearRegression.ipynb
+++ b/05_ML_Concepts_II_Data_Prep/revised_linearRegression.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "122d8e09-cd5b-4971-af2a-841f086d49f6",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "07654f1b-b460-4afc-b398-568a09995641",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "4104fd15-0c52-4713-91ac-5b1c90cc55e1",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "77435a4e",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
        "4  515000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "a82a7a12",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "27a753b8-c08f-497e-abde-c15554ef31ce",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "ff889623-314b-4640-b36c-ec3a39ec4cef",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "<Axes: xlabel='age', ylabel='price'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "48850681-19a0-494f-9ee5-52c2db7fd193",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
        "<Axes: xlabel='age_ihs', ylabel='price_ihs'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "bb1a853c-7bbe-4605-b246-99b6b5cee447",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "86784247-2172-48e0-a05e-7b518d5ce428",
    "metadata": {},
    "outputs": [
@@ -2475,7 +2475,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2489,7 +2489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
