--- a/05.1_reg_data_prep/lab4.ipynb
+++ b/05.1_reg_data_prep/lab4.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "f375915d-5909-4239-b3e0-5ae9b45d946d",
+       "ref": "c97daafe-984f-41f2-ab92-ade4bd5a0ef7",
        "rows": [
         [
          "0",
@@ -246,7 +246,7 @@
        "4    270                  90.0      Manhattan     Apartment  Entire home/apt"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "Name: Price, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "Name: Review Scores Rating, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "Text(0.5, 1.0, 'Kernel Density Plot of Price by Neighbourhood ')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
        "Text(0.5, 1.0, 'Kernel Density Plot of Log(Price) by Neighbourhood ')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "4d9ad88e-431e-44d6-8779-c5ff3c550876",
+       "ref": "2970d796-7ba9-4f46-9bb3-f78d12897dd0",
        "rows": [
         [
          "0",
@@ -929,7 +929,7 @@
        "4  515000  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,14 +977,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1026/3281081274.py:3: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
+      "/tmp/ipykernel_1039/3281081274.py:3: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
       "  skews = df2[num_cols].apply(lambda x: skew(x.dropna())).sort_values(ascending=False)\n"
      ]
     }
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1141,14 +1141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1026/3581089637.py:2: UserWarning: Dataset has 0 variance; skipping density estimate. Pass `warn_singular=False` to disable this warning.\n",
+      "/tmp/ipykernel_1039/3581089637.py:2: UserWarning: Dataset has 0 variance; skipping density estimate. Pass `warn_singular=False` to disable this warning.\n",
       "  sns.kdeplot(df2, x='Price', hue='Make', fill=True, bw_adjust=0.7)\n"
      ]
     },
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1264,11 +1264,7 @@
      "output_type": "stream",
      "text": [
       "R^2: 0.407\n",
-      "RMSE: 191845.584\n",
-      "Make_Year           61724.063330\n",
-      "Mileage_Run             2.290554\n",
-      "Seating_Capacity        0.000000\n",
-      "dtype: float64\n"
+      "RMSE: 191845.584\n"
      ]
     }
    ],
@@ -1286,10 +1282,7 @@
     "print(\"R^2:\", round(r2, 3))\n",
     "\n",
     "rmse = mean_squared_error(y_test, y_pred) ** 0.5\n",
-    "print(\"RMSE:\", round(rmse,3))\n",
-    "\n",
-    "coefs = Series(model.coef_, index=model.feature_names_in_)\n",
-    "print(coefs)"
+    "print(\"RMSE:\", round(rmse,3))"
    ]
   },
   {
@@ -1301,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1309,56 +1302,7 @@
      "output_type": "stream",
      "text": [
       "R^2: 0.537\n",
-      "RMSE: 169473.874\n",
-      "Make_Chevrolet                -299782.076567\n",
-      "Make_Datsun                   -254500.059697\n",
-      "Make_Ford                      -91960.333538\n",
-      "Make_Honda                      53160.102984\n",
-      "Make_Hyundai                   -15154.436596\n",
-      "Make_Jeep                      209993.594112\n",
-      "Make_Kia                       347902.020503\n",
-      "Make_Mahindra                  142277.941253\n",
-      "Make_Maruti Suzuki             -29870.878799\n",
-      "Make_Nissan                     74413.186344\n",
-      "Make_Renault                   -56973.329596\n",
-      "Make_Skoda                    -188049.464959\n",
-      "Make_Tata                       63221.335454\n",
-      "Make_Toyota                    135230.298370\n",
-      "Make_Volkswagen                -89907.899268\n",
-      "Color_beige                    -89121.654624\n",
-      "Color_black                    -53310.893884\n",
-      "Color_blue                      83094.608913\n",
-      "Color_bronze                   -21078.505956\n",
-      "Color_brown                     30555.746237\n",
-      "Color_golden                   143927.668379\n",
-      "Color_green                     30776.236504\n",
-      "Color_grey                      35356.036682\n",
-      "Color_maroon                   -33597.801742\n",
-      "Color_orange                     6152.200086\n",
-      "Color_purple                  -198938.462696\n",
-      "Color_red                       37678.277624\n",
-      "Color_silver                     3974.406471\n",
-      "Color_white                     24068.734535\n",
-      "Color_yellow                      463.403470\n",
-      "Body_Type_crossover             44868.739220\n",
-      "Body_Type_hatchback           -122494.568713\n",
-      "Body_Type_muv                 -166415.043597\n",
-      "Body_Type_sedan                 84280.345172\n",
-      "Body_Type_suv                  159760.527918\n",
-      "No_of_Owners_1st               109566.210074\n",
-      "No_of_Owners_2nd                45893.496847\n",
-      "No_of_Owners_3rd              -155459.706921\n",
-      "Fuel_Type_diesel                -7857.036679\n",
-      "Fuel_Type_petrol               -73780.473228\n",
-      "Fuel_Type_petrol+cng            81637.509906\n",
-      "Transmission_4-Speed          -155262.209689\n",
-      "Transmission_5-Speed          -121348.698811\n",
-      "Transmission_6-Speed            70384.581268\n",
-      "Transmission_7-Speed           218874.307968\n",
-      "Transmission_CVT               -12647.980736\n",
-      "Transmission_Type_Automatic     28328.851534\n",
-      "Transmission_Type_Manual       -28328.851534\n",
-      "dtype: float64\n"
+      "RMSE: 169473.874\n"
      ]
     }
    ],
@@ -1383,11 +1327,7 @@
     "print(\"R^2:\", round(r2, 3))\n",
     "\n",
     "rmse = mean_squared_error(y_test, y_pred) ** 0.5\n",
-    "print(\"RMSE:\", round(rmse,3))\n",
-    "\n",
-    "coefs = Series(model.coef_, index=model.feature_names_in_)\n",
-    "print(coefs)\n",
-    "\n"
+    "print(\"RMSE:\", round(rmse,3))"
    ]
   },
   {
@@ -1399,71 +1339,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R^2: 0.537\n",
-      "RMSE: 169473.874\n",
-      "Make_Chevrolet                -299782.076567\n",
-      "Make_Datsun                   -254500.059697\n",
-      "Make_Ford                      -91960.333538\n",
-      "Make_Honda                      53160.102984\n",
-      "Make_Hyundai                   -15154.436596\n",
-      "Make_Jeep                      209993.594112\n",
-      "Make_Kia                       347902.020503\n",
-      "Make_Mahindra                  142277.941253\n",
-      "Make_Maruti Suzuki             -29870.878799\n",
-      "Make_Nissan                     74413.186344\n",
-      "Make_Renault                   -56973.329596\n",
-      "Make_Skoda                    -188049.464959\n",
-      "Make_Tata                       63221.335454\n",
-      "Make_Toyota                    135230.298370\n",
-      "Make_Volkswagen                -89907.899268\n",
-      "Color_beige                    -89121.654624\n",
-      "Color_black                    -53310.893884\n",
-      "Color_blue                      83094.608913\n",
-      "Color_bronze                   -21078.505956\n",
-      "Color_brown                     30555.746237\n",
-      "Color_golden                   143927.668379\n",
-      "Color_green                     30776.236504\n",
-      "Color_grey                      35356.036682\n",
-      "Color_maroon                   -33597.801742\n",
-      "Color_orange                     6152.200086\n",
-      "Color_purple                  -198938.462696\n",
-      "Color_red                       37678.277624\n",
-      "Color_silver                     3974.406471\n",
-      "Color_white                     24068.734535\n",
-      "Color_yellow                      463.403470\n",
-      "Body_Type_crossover             44868.739220\n",
-      "Body_Type_hatchback           -122494.568713\n",
-      "Body_Type_muv                 -166415.043597\n",
-      "Body_Type_sedan                 84280.345172\n",
-      "Body_Type_suv                  159760.527918\n",
-      "No_of_Owners_1st               109566.210074\n",
-      "No_of_Owners_2nd                45893.496847\n",
-      "No_of_Owners_3rd              -155459.706921\n",
-      "Fuel_Type_diesel                -7857.036679\n",
-      "Fuel_Type_petrol               -73780.473228\n",
-      "Fuel_Type_petrol+cng            81637.509906\n",
-      "Transmission_4-Speed          -155262.209689\n",
-      "Transmission_5-Speed          -121348.698811\n",
-      "Transmission_6-Speed            70384.581268\n",
-      "Transmission_7-Speed           218874.307968\n",
-      "Transmission_CVT               -12647.980736\n",
-      "Transmission_Type_Automatic     28328.851534\n",
-      "Transmission_Type_Manual       -28328.851534\n",
-      "dtype: float64\n"
+      "R^2: 0.736\n",
+      "RMSE: 128112.627\n"
      ]
     }
    ],
    "source": [
     "#Both numerical and categorical \n",
-    "X_train3 = pd.get_dummies(X_train[X_train_col], drop_first = False)\n",
-    "X_test3 = pd.get_dummies(X_test[X_test_col], drop_first = False)\n",
+    "\n",
+    "X_train3 = pd.concat([X_train1, X_train2], axis=1)\n",
+    "X_test3 = pd.concat([X_test1, X_test2], axis=1)\n",
     "\n",
     "X_test3 = X_test3.reindex(columns=X_train3.columns, fill_value=0)\n",
     "\n",
@@ -1476,10 +1368,82 @@
     "print(\"R^2:\", round(r2, 3))\n",
     "\n",
     "rmse = mean_squared_error(y_test, y_pred) ** 0.5\n",
-    "print(\"RMSE:\", round(rmse,3))\n",
+    "print(\"RMSE:\", round(rmse,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The joint model performed better than both previous two models. In R^2, it was 0.329 greater than the first model and 0.202 greater than the second one. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5) Use the PolynomialFeatures function from sklearn to expand the set of numerical variables you’re using in the regression. As you increase the degree of the expansion, how do the R^2 and RMSE change? At what point does R^2 go negative on the test set? For your best model with expanded features, what is the R^2 and RMSE? How does it compare to your best model from part 4?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Degree: 1, R² Train: 0.341, RMSE Train: 206130.575, R² Test: 0.407, RMSE Test: 191845.584\n",
+      "Degree: 2, R² Train: 0.353, RMSE Train: 204295.409, R² Test: 0.420, RMSE Test: 189745.738\n",
+      "Degree: 3, R² Train: 0.354, RMSE Train: 204136.387, R² Test: 0.413, RMSE Test: 190804.729\n",
+      "Degree: 4, R² Train: 0.355, RMSE Train: 203896.769, R² Test: 0.406, RMSE Test: 191953.862\n",
+      "Degree: 5, R² Train: 0.355, RMSE Train: 203956.181, R² Test: 0.407, RMSE Test: 191830.259\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
-    "coefs = Series(model.coef_, index=model.feature_names_in_)\n",
-    "print(coefs)"
+    "test = []\n",
+    "\n",
+    "for degree in range(1, 6):  # Degrees from 1 to 5\n",
+    "    Polynomial = PolynomialFeatures(degree=degree, include_bias=False)\n",
+    "    X_train4 = X_train.select_dtypes(include=['number'])\n",
+    "    X_test4 = X_test.select_dtypes(include=['number'])\n",
+    "    X_train4 = Polynomial.fit_transform(X_train4)\n",
+    "    X_test4 = Polynomial.transform(X_test4)  \n",
+    "\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(X_train4, y_train)\n",
+    "\n",
+    "    y_train_pred = model.predict(X_train4)\n",
+    "    y_test_pred= model.predict(X_test4)\n",
+    "\n",
+    "    r2_train = r2_score(y_train, y_train_pred)\n",
+    "    rmse_train = mean_squared_error(y_train, y_train_pred) ** 0.5\n",
+    "\n",
+    "    r2_test = r2_score(y_test, y_test_pred)\n",
+    "    rmse_test = mean_squared_error(y_test, y_test_pred) ** 0.5\n",
+    "\n",
+    "    test.append((degree, r2_train, rmse_train, r2_test, rmse_test))\n",
+    "\n",
+    "for result in test:\n",
+    "    print(f\"Degree: {result[0]}, R² Train: {result[1]:.3f}, RMSE Train: {result[2]:.3f}, R² Test: {result[3]:.3f}, RMSE Test: {result[4]:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the degrees increase, the R^2 for both training and testing increase a little bit and then continued on decreasing after degree 2. RMSE for training went downwards, while the RMSE for testing goes up and down. R^2 started going negative after degree 2 on the test set. For the best model , the R^2 train is 0.353, RMSE train is 204295.409, R^2 test is 0.420, and RMSE test is 189745.738. In comparison with part 4, best model still does not perform as well as the joint model. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6) For your best model so far, determine the predicted values for the test data and plot them against the true values. Do the predicted values and true values roughly line up along the diagonal, or not? Compute the residuals/errors for the test data and create a kernel density plot. Do the residuals look roughly bell-shaped around zero? Evaluate the strengths and weaknesses of your model."
    ]
   }
  ],
