--- a/05.1_reg_data_prep/lab4.ipynb
+++ b/05.1_reg_data_prep/lab4.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing Packages"
+    "#### Importing Packages"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Loading Dataset"
+    "#### Loading Dataset"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Average price and score"
+    "#### Average price and score"
    ]
   },
   {
@@ -326,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kernel Density Plot for price and log price"
+    "#### Kernel Density Plot for price and log price"
    ]
   },
   {
