--- a/06_ML_Concepts_II_KNN/lab5.ipynb
+++ b/06_ML_Concepts_II_KNN/lab5.ipynb
@@ -1961,7 +1961,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The confusion matrix shows only one False positive even after adjusting the thresholds. The model performs well with high accuracy and precision. The sensitivity and specificity are high considering the true positives and true negatives. "
+    "The confusion matrix shows only one False negative even after adjusting the thresholds. The model performs well with high accuracy and precision. The sensitivity and specificity are high considering the true positives and true negatives. "
    ]
   },
   {
@@ -1989,7 +1989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The positive element about this model is the high accuracy. From observing the confusion matrix, it seems to predict everything correctly with only one False Positive. However, this high accuracy is concerning as well. The graph is over-fitting if it produces results that are basically perfect. This means the model is essentially memorizing the data for the college completion, instead of making real predictions. From observing the probability distribution model, we can see two distinct tall peaks for positive and negative class, meaning the model is predicting two classes with high confidence. The model is unable to generalize the dataset as there are two defined clusters within the dataset. The model is also over-fitting with the peaks having low variation, which means that it is very concentrated as certain values. "
+    "The positive element about this model is the high accuracy. From observing the confusion matrix, it seems to predict everything correctly with only one False negative. However, this high accuracy is concerning as well. The graph is over-fitting if it produces results that are basically perfect. This means the model is essentially memorizing the data for the college completion, instead of making real predictions. From observing the probability distribution model, we can see two distinct tall peaks for positive and negative class, meaning the model is predicting two classes with high confidence. The model is unable to generalize the dataset as there are two defined clusters within the dataset. The model is also over-fitting with the peaks having low variation, which means that it is very concentrated as certain values. "
    ]
   },
   {
@@ -2293,7 +2293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model performed "
+    "With an accuracy of 0.99, the model performed well overall. Setting the k at a larger value allows it to make more general assumption on the dataset, instead of just memorizing the data. It will be able to average out the the points and smoothen the decision boundary within the neighbors to make actual predictions. With adjusting the threshold, there are changes in false positives and false negatives that helped adjust the precision and sensitivity as well. A threshold of 0.9 shows it tries to be safe, which lead to less false positives. On the other hand, a threshold of 0.1 is more audacious and made more false positive guesses. "
    ]
   },
   {
@@ -2307,7 +2307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### K and Model Accuracy"
+    "#### New Target Variable: hbcu (Historically Black Colleges and Universities)"
    ]
   },
   {
