--- a/06_ML_Concepts_II_KNN/lab5.ipynb
+++ b/06_ML_Concepts_II_KNN/lab5.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question: How does a KNN model predict if a college can predict college completion for students? "
+    "## Question: How does a KNN model predict college completion (grad_150) for students? "
    ]
   },
   {
