--- a/06_ML_Concepts_II_KNN/lab5.ipynb
+++ b/06_ML_Concepts_II_KNN/lab5.ipynb
@@ -2356,6 +2356,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using the Two Functions "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 227,
    "metadata": {},
