--- a/08_DT_Class/DT_Class_Lab.ipynb
+++ b/08_DT_Class/DT_Class_Lab.ipynb
@@ -827,21 +827,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DecisionTreeClassifier(max_depth=4, random_state=1000)\n"
-     ]
-    }
-   ],
    "source": [
-    "best = model.best_estimator_ # Retrieve best model\n",
-    "print(best)"
+    "The best depth value is 4. "
    ]
   },
   {
@@ -853,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
